--- a/views/layout.html
+++ b/views/layout.html
@@ -3,6 +3,7 @@
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' />
   </head>
   <body>
+    <!-- just check for selectedCategory instead of length -->
     <ul class='nav nav-tabs' style='margin-bottom:10px'>
       <li {% if !selectedCategory.length %} class='active'{% endif %}>
         <a href='/'>Home</a>
